--- a/src/Row.css
+++ b/src/Row.css
@@ -1,6 +1,20 @@
+.row {
+    margin-left: 20px;
+    color: white;
+}
+
 .row__posters {
     display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px;
+    scrollbar-width: none;
 }
+
+.row__posters::-webkit-scrollbar {
+    display: none;
+}
+
 
 .row__poster {
     object-fit: contain;
@@ -12,5 +26,15 @@
 
 .row__poster:hover {
     transform: scale(1.08);
+    opacity: 1;
+}
+
+
+.row__posterLarge {
+    max-height: 250px;
+}
+
+.row__posterLarge:hover {
+    transform: scale(1.09);
     opacity: 1;
 }
